# Polly

./: .Rbuildignore  DESCRIPTION  Makevars  Makevars.in  NAMESPACE  README.md  cleanup  config.status  configure  configure.ac
.Rproj.user/E74EBCCB/: cpp-compilation-config  cpp-definition-cache
.Rproj.user/E74EBCCB/pcs/: files-pane.pper
R/: PollyRFunctions.R  RcppExports.R
autom4te.cache/: output.0  requests  traces.0
man/: MicroGenotyper.Rd  Polly.Rd  PollyMicros.Rd  PollySI.Rd
src/: Makevars  Makevars.in  Polly.cpp  Polly.h  PollyR.cpp  PollyR.h  RcppExports.cpp  configure  configure.ac
src/autom4te.cache/: output.0  traces.0
vignettes/: Polly Vignette.Rmd  Polly-Vignette.html
